--- a/module6_security_center/pages/security_center.html
+++ b/module6_security_center/pages/security_center.html
@@ -165,6 +165,53 @@
                 </div>
             </div>
         </div>
+
+        <!-- Modal for Transparency Report (New) -->
+        <div id="report-modal" class="modal-overlay">
+            <div class="modal-content report-content">
+                <button class="close-modal" id="report-close-btn">&times;</button>
+                <div class="modal-body">
+                    <div class="report-header">
+                        <div class="threat-icon-large" id="report-icon">⚠️</div>
+                        <div class="header-text">
+                            <h2 id="report-title">威胁标题</h2>
+                            <span class="report-timestamp" id="report-time">2023-10-27 10:23</span>
+                        </div>
+                    </div>
+                    
+                    <div class="report-section">
+                        <h4><i class="fas fa-info-circle"></i> 威胁说明</h4>
+                        <p id="report-description">描述内容...</p>
+                    </div>
+
+                    <div class="report-grid">
+                        <div class="report-section">
+                            <h4><i class="fas fa-exclamation-triangle"></i> 潜在风险</h4>
+                            <ul class="risk-list" id="report-risks">
+                                <!-- JS Populated -->
+                            </ul>
+                        </div>
+                        <div class="report-section">
+                            <h4><i class="fas fa-shield-alt"></i> 安全建议</h4>
+                            <ul class="advice-list" id="report-advice">
+                                <!-- JS Populated -->
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="report-footer">
+                        <div class="info-row">
+                            <span class="label">拦截 ID:</span>
+                            <code id="report-id">BLOCK-XXX</code>
+                        </div>
+                        <div class="info-row">
+                            <span class="label">URL:</span>
+                            <code id="report-url" class="url-code">http://example.com</code>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="../js/security_center.js"></script>
