拦截低威胁的网站

--- a/chrome/security_center/pages/security_center.html
+++ b/chrome/security_center/pages/security_center.html
@@ -119,36 +119,36 @@
                 <!-- Knowledge Base Section -->
                 <section id="knowledge-section" class="tab-content">
                     <div class="grid-layout">
-                        <!-- Threat 1: Malicious URLs (Module 1) -->
+                        <!-- Threat 1: URL Structure (Module 1) -->
                         <div class="card glass-panel knowledge-card">
                             <div class="icon-header">🔗</div>
-                            <h3>恶意链接传播</h3>
-                            <p>攻击者通过邮件或短信传播已知的钓鱼网址。<b>解决模块：模块 1 (智能拦截)</b></p>
+                            <h3>URL 结构与伪造</h3>
+                            <p>IP直连、短链接混淆、特殊符号欺骗 (@, //) 及形似域名攻击。</p>
                             <span class="learn-more" data-topic="threat-url">了解更多</span>
                         </div>
 
-                        <!-- Threat 2: Low Reputation (Module 2) -->
+                        <!-- Threat 2: Domain Reputation (Module 2) -->
                         <div class="card glass-panel knowledge-card">
-                            <div class="icon-header">⚠️</div>
-                            <h3>网站信誉风险</h3>
-                            <p>某些网站虽然未被列入黑名单，但表现出高风险特征。<b>解决模块：模块 2 (安全评分)</b></p>
-                            <span class="learn-more" data-topic="threat-reputation">了解更多</span>
+                            <div class="icon-header">⏳</div>
+                            <h3>域名信誉风险</h3>
+                            <p>注册时间过短、WHOIS 信息隐藏、无 DNS 记录及 HTTPS 滥用。</p>
+                            <span class="learn-more" data-topic="threat-domain">了解更多</span>
                         </div>
 
-                        <!-- Threat 3: Visual Deception (Module 3) -->
+                        <!-- Threat 3: DOM Content (Module 3) -->
                         <div class="card glass-panel knowledge-card">
                             <div class="icon-header">👁️</div>
-                            <h3>视觉欺诈与伪造</h3>
-                            <p>网站模仿银行或官方机构的登录界面进行欺诈。<b>解决模块：模块 3 (DOM 分析)</b></p>
-                            <span class="learn-more" data-topic="threat-visual">了解更多</span>
+                            <h3>页面内容与行为</h3>
+                            <p>异常表单提交 (SFH)、隐蔽 Iframe、状态栏伪造及弹窗骚扰。</p>
+                            <span class="learn-more" data-topic="threat-content">了解更多</span>
                         </div>
 
-                        <!-- Threat 4: False Security (Module 5) -->
+                        <!-- Threat 4: AI Model (Module 4) -->
                         <div class="card glass-panel knowledge-card">
-                            <div class="icon-header">🔓</div>
-                            <h3>虚假安全陷阱</h3>
-                            <p>网站使用 HTTPS 但证书不可信，或包含混合内容。<b>解决模块：模块 5 (透明报告)</b></p>
-                            <span class="learn-more" data-topic="threat-https">了解更多</span>
+                            <div class="icon-header">🧠</div>
+                            <h3>AI 深度学习研判</h3>
+                            <p>基于 1D-CNN 神经网络模型，综合 30 维特征进行概率预测。</p>
+                            <span class="learn-more" data-topic="threat-ai">了解更多</span>
                         </div>
                     </div>
                 </section>
